--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="Assets/|Assets/" kind="src" path="src"/>
+	<classpathentry excluding="Assets/" kind="src" path="src"/>
+	<classpathentry excluding="src/|res/img/" kind="src" path=""/>
+	<classpathentry kind="src" path="res/img"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
