Icono para el juego

--- a/M3/ThePlanetWars/bin/.gitignore
+++ b/M3/ThePlanetWars/bin/.gitignore
@@ -5,10 +5,12 @@
 /Asset_EarthBasic.png
 /Asset_EarthDestroyed.png
 /Asset_HeavyHunter.png
+/Asset_IconoJuego.png
 /Asset_IonCannon.png
 /Asset_LightHunter.png
 /Asset_MissileLauncher.png
 /Asset_PlasmaCannon.png
 /GamePlanetWars/
 /Lib/
+/batalla0.xml
 /res/
